ci-cd/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
    kubernetes.io/ingress.class: kong
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.datochain.com
    http:
      paths:
      - path: /
        backend:
            serviceName: jenkins
            servicePort: 80
