ci-cd/local-cicd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # configuration.konghq.com: strip-path
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.localhost
    http:
      paths:
      - path: /
        backend:
            serviceName: jenkins
            servicePort: 80
